# osa4

./: Cargo.toml  README.md
data/: scene.gltf  sphere.gltf
data/shaders/: joku.glsl  sdf-frag.glsl  sdf-vert.glsl  sdf_func.glsl  test-frag.glsl  test-vert.glsl  white.glsl
src/: main.rs  obj.rs
src/f/: FEdge.rs  FMaterial.rs  FMesh.rs  FObject.rs  Sdf.rs  Vertex.rs  World.rs  fedge.rs  fobject.rs  mod.rs  physics.rs  primitives.rs  sdf.rs  shader.rs  vertex.rs  world.rs
src/f/scene/: Dancer.rs
src/object/: mod.rs
src/scene/: Dancer.rs  dancer.rs  mod.rs
src/sdf/: mod.rs
src/support/: mod.rs
