[package]
name = "osa4"
version = "0.1.0"
authors = ["olli <olli@cloudnsci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collada = "0.14.0"
serde_json = "1.0"
piston_window = "0.120.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.32.0"
shader_version = "0.7.0"
