[package]
name = "osa4"
version = "0.1.0"
authors = ["olli <olli@cloudnsci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
glium = "0.30.2"
image = "0.23"
vecmath = "1.0.0"
camera_controllers = "0.32.0"
shader_version = "0.7.0"
memoffset = "0.6"
takeable-option = "0.5"
backtrace = "0.3.2"
lazy_static = "1.0"
smallvec = "1.0"
fnv = "1.0.5"
obj-rs = "0.7.0"
gltf = "*"
#nalgebra-glm = "*"
nalgebra = "*"

