[package]
name = "osa4"
version = "0.1.0"
authors = ["olli <olli@cloudnsci.com>"]
edition = "2018"


[profile.release]
#lto = true         # link-time optimization
# use also strip target/release/osa4
# more https://github.com/johnthagen/min-sized-rust
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
glium = "0.30.2"
image = "0.23"
memoffset = "0.6"
takeable-option = "0.5"
backtrace = "0.3.2"
gltf = "*"
#nalgebra-glm = "*"
nalgebra = "*"
regex = "1.5"
